--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,2 @@
 spring.application.name=HomeTheater
-server.address=0.0.0.0
-server.port=8080
-spring.datasource.url=jdbc:sqlite:${user.dir}/database/hometheaterdb.db
-spring.datasource.driver-class-name=org.sqlite.JDBC
+spring.profiles.active=prod
