--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -3,5 +3,6 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
+# Vis SQL i logs (nyttigt i testfasen)
 logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
 logging.level.org.springframework.jdbc.core.StatementCreatorUtils=TRACE
