--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
 spring.application.name=HomeTheater
 server.address=0.0.0.0
 server.port=8080
-spring.datasource.url=jdbc:sqlite:${user.dir}/database/hometheaterdb.db
+spring.datasource.url=jdbc:sqlite:../data/hometheaterdb.db
 spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.datasource.username=
 spring.datasource.password=
