loginpage layout implemented with security feature update, and handled dynamic image controlling from asset repository

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=HomeTheater
 app.version=1.0.0
+login.background.url=https://raw.githubusercontent.com/nikholt1/HTasset/refs/heads/main/loginImage/loginImage.jpg
 spring.profiles.active=prod
