--- a/src/main/java/com/example/hometheater/repository/settings.conf
+++ b/src/main/java/com/example/hometheater/repository/settings.conf
@@ -1,3 +1,3 @@
-folderPath="/home/niklas/Desktop/HT/data/videos"
+folderPath="C:\projects\springproject\RefractApplication\data\videos"
 userName="testFromConf"
 
