Update the category folder automatic image fill if none exists. updated settings conf not to be included due to jar errors.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=HomeTheater
 app.version=0.0.0
+app.folder-path=C:/projects/springproject/RefractApplication/data/videos
 spring.profiles.active=prod
